# qt-flif-plugin

./: .gitignore  CMakeLists.txt
